Trello #367 Discourse theme - align with upstream tag v0.9.9.10 + create mobile theme: topic polish (fix too much height on topic-meta-data, and not enough vertical separation under down icon at the bottom of embedded posts)

--- a/assets/stylesheets/desktop/topic-post.scss
+++ b/assets/stylesheets/desktop/topic-post.scss
@@ -297,7 +297,7 @@ span.post-count {
 
 .topic-body {
   box-sizing: border-box;
-  float: none;
+  margin-left: -55px;
   padding-left: 55px;
   padding-top: 13px;
   width: 100%;
